Fix header rendering on mobile devices

--- a/simple-fts-demo-server/src/main/resources/public/index.css
+++ b/simple-fts-demo-server/src/main/resources/public/index.css
@@ -46,3 +46,17 @@ table td {
 .mdl-data-table th:first-of-type {
     padding-left: 18px;
 }
+
+@media screen and (max-width: 1024px) {
+    .mdl-layout__header {
+        display: flex;
+    }
+
+    .mdl-layout__header > * {
+        display: none;
+    }
+
+    .mdl-layout__header > .mdl-layout__header-row {
+        display: flex;
+    }
+}
